<resources>
    <string name="app_name">TicTacToe</string>
    <string name="turn_human">Your Turn</string>
    <string name="turn_computer">Android\'s Turn</string>
    <string name="result_tie">It\'s a tie</string>
    <string name="result_human_wins">You Won!</string>
    <string name="result_android_wins">Android Won!</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="info">Info</string>
    <string name="human">Human:  </string>
    <string name="ties">Ties:  </string>
    <string name="android">Android:  </string>
    <string name="contact_heading">Contact: </string>
    <string name="contact_info">
        Contact info:-\n
        <b>Name: </b>Shubham Anand\n
        <b>Email: </b>shubhamnitjsr78@gmail.com\n
        <b>Phone: </b>9470918858\n
    </string>
    <string name="about_heading">About</string>
    <string name="about_info">This app allows you to play a game of tic toc toe against the computer.The rounds will rotate who gets
     to play first.Also,the App will keep track and display the result of the games at the bottom of the screen.</string>
</resources>
