<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.seals.shubham.tictactoe.MainActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="300dp" android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="30dp"
        android:paddingRight="20dp"
        android:layout_alignParentStart="true">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:text="@string/one"
                android:layout_column="0" android:layout_height="100dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/two"
                android:id="@+id/button2" android:layout_column="1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/three"
                android:id="@+id/button3" android:layout_column="2"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:text="@string/four"
                android:id="@+id/button4" android:layout_column="0" android:layout_height="100dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/five"
                android:id="@+id/button5" android:layout_column="1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/six"
                android:id="@+id/button6" android:layout_column="2"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_width="110dp"
                android:text="@string/seven"
                android:id="@+id/button7" android:layout_column="0" android:layout_height="100dp"/>
            <Button
                android:layout_width="110dp"
                android:layout_height="100dp"
                android:text="@string/eight"
                android:id="@+id/button8" android:layout_column="1"/>
            <Button
                android:layout_width="110dp"
                android:layout_height="100dp"
                android:text="@string/nine"
                android:id="@+id/button9" android:layout_column="2"/>
        </TableRow>
    </TableLayout>
</RelativeLayout>
